--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,12 +20,22 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse " id="navbarNav">
           <ul class="navbar-nav">
             {% if user.is_authenticated %}
-            <h3 style="color:white; text-align:center padding-right:30px;">wellcome {{user.username}}!</h3>
-                <p><a href="{% url 'logout' %}">Log Out</a></p>
+            <li class="nav-item">
+            <a class ='nav-link text-warning'>wellcome {{user.username}}!</a>
+            </li>
+            <li class="nav-item">
+                <p><a class ='nav-link text-warning' href="{% url 'logout' %}">Log Out</a></p>
+              </li>
             {% else %}
-                <a class ='text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'login' %}">Log In</a> |
-                <a class ='text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'signup' %}">Customer SignUp</a> 
-                <a class ='text-warning'style="padding-right:20px;text-decoration:none;"href="{% url 'signup2' %}">Manager SignUp </a> 
+            <li class="nav-item">
+                <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'login' %}">Log In</a>
+              </li>
+              <li class="nav-item">
+                <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'signup' %}">Customer SignUp</a> 
+              </li>
+              <li class="nav-item">
+                <a class ='nav-link text-warning'style="padding-right:20px;text-decoration:none;"href="{% url 'signup2' %}">Manager SignUp </a> 
+              </li>
             {% endif %}
             <li class="nav-item">
               <a class="nav-link text-warning" href="{% url 'cart:carts_detail'%}">cart</a>
@@ -33,6 +43,19 @@
             <li class="nav-item">
               <a class="nav-link text-warning" href="#">menu</a>
             </li>
+                    <li class="nav-item">
+                      <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                          Dropdown button
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                          <li><a class="dropdown-item" href="{%url 'admin'%}">Admin-Panel</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </div>
+                    </li>
+            </div>
           </ul>
         </div>
       </nav>
@@ -55,7 +78,7 @@
             <i class="fa fa-telegram " aria-hidden="true"></i>
             <i class="fa fa-youtube-play " aria-hidden="true"></i>
         </div>
-        <div>copyright &copy; 2021</div>
+        <div>copyright &copy; 2022</div>
       </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
