--- a/src/templates/cart/detail.html
+++ b/src/templates/cart/detail.html
@@ -30,10 +30,10 @@
                 <tr>
                     <td>
                         <a href="{{foodmenu.get_absolute_url}}">
-                            <img class="rounded-lg shadow" src="{{foodmenu.Food_id.photo.url}}" height="50" width="50" alt="">
+                            <img class="rounded-lg shadow" src="{{foodmenu.food.photo.url}}" height="50" width="50" alt="">
                         </a>
                     </td>
-                        <td>{{foodmenu.Food_id.name}}</td>
+                        <td>{{foodmenu.food.name}}</td>
                         <td>{{item.number}}</td>
                     <td>
                         <form action="{% url 'cart:cart_remove' foodmenu.id %}" method="POST">
