create registration form

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,10 +31,10 @@
                 <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'login' %}">Log In</a>
               </li>
               <li class="nav-item">
-                <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'signup' %}">Customer SignUp</a> 
+                <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'signup2' %}">Customer SignUp</a> 
               </li>
               <li class="nav-item">
-                <a class ='nav-link text-warning'style="padding-right:20px;text-decoration:none;"href="{% url 'signup2' %}">Manager SignUp </a> 
+                <a class ='nav-link text-warning'style="padding-right:20px;text-decoration:none;"href="{% url 'signup' %}">Manager SignUp </a> 
               </li>
             {% endif %}
             <li class="nav-item">
