--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top "  >
-        <a class="navbar-brand text-warning" href="{%url 'restaurant:home' %}" >online Restaurant</a>
+        <a class="navbar-brand text-warning" href="{%url 'restaurant:home' %}" >Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,19 +47,23 @@
                     <li class="nav-item">
                       <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown button
+                          profiles
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                           <li><a class="dropdown-item" href="{%url 'admin'%}">Admin-Panel</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          <li><a class="dropdown-item" href="#">customer-panel</a></li>
+                          <li><a class="dropdown-item" href="#">restaurant-panel</a></li>
                         </ul>
                       </div>
                     </li>
+                    
             </div>
           </ul>
         </div>
       </nav>
+      
+      
+    
 
 
       {% block content %}{% endblock content %}
