--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,9 +1,8 @@
-{% extends 'base.html' %}
-{% block content %}
+ 
  
 <div class="container">
    {% comment %} <a href="{% url 'Home' %}" class="btn btn-primary  mb-2" style="margin-top: 10px">Home</a> {% endcomment %}
-  {% if query %}
+   {% if products %}
             <h2>
             {% with results.count as total_results %}
             Found {{ total_results }} result{{ total_results|pluralize }}
@@ -11,7 +10,7 @@
             </h2>
                 <center>
                 <div class="container-fluid" style="margin-top:30px;">
-                    {% for foodmenu in results %}
+                    {% for foodmenu in products %}
                         <h1>{{foodmenu.food.name}}</h1>
                         <hr>
                         <div class="row">
@@ -49,8 +48,117 @@
             </center>
             
  </div>
-       {% endif %}  
+{% endif %}   
+
+
+ 
+ {% comment %} <div class="w-10 text-center">
+	<form id="search-form" autocomplete='off' style="margin-top: 10px;">
+		{% csrf_token %}
+		<input type="text" id='search-input' class='p-1 w-50 search' placeholder="search">
+	</form>	
+	<div id="result-box" class="result-card not-visible" style="width: 50%;max-height:none;"></div>
+</div>
+
+<script>
+    window.onload = function (){
+
+        const url=  window.location.href
+        const searchForm = document.getElementById("search-form")
+        const searchInput = document.getElementById("search-input")
+        const resultBox = document.getElementById('result-box')
+        
+        const csrf = document.getElementsByName('csrfmiddlewaretoken')[0].value
+        
+        const sendSearchData = (data)=>{
+            $.ajax({
+                type:'POST',
+                url: URL,
+                data :{
+                    'csrfmiddlewaretoken':csrf,
+                    'data': data,
+                },
+                success: function(res){
+                    // console.log(res.dataa)
+                    const data = res.dataview
+                    if (Array.isArray(data)){
+                        resultBox.innerHTML = ''
+                        data.forEach(food=>{
+                            resultBox.innerHTML += `
+                            
+                            <a href="${url}${food.pk}" class='item' >
+                                <div class ="row" style="margin-left:10px">
+                                    <div class ="col-2>
+                                        <p class="text-muted" ><img src="${food.food.photo}" class="food-img"> <b style="color:black">${food.food.name}</b><b style="color:#6610f2">${food.price} ${food.department}</b></p>
+                                    </div>
+                                </div>
+                            </a>
+                            `
+                        })
+        
+        
+                    }else{
+                        if (searchInput.value.length > 0){
+                            resultBox.innerHTML=`<b>${data}</b>`
+                        }else{
+                            resultBox.classList.add('not-visible')
+                        }
+                    }
+               
+                },
+                error: function(error){
+                    console.log(error)
+                }
+            })
+        }
+        
+        
+        // load whatever is added in search input as value (letter by letter)
+        searchInput.addEventListener('keyup', e=>{
+            console.log(e.target.value)
+            if (resultBox.classList.contains('not-visible')){
+                resultBox.classList.remove('not-visible')
+            }
+            sendSearchData(e.target.value)
+        })
+         
+          
+        }
 
 
 
-{% endblock content %}
+
+
+
+
+</script> {% endcomment %}
+
+{% comment %} {% if products %}
+<div class="row col-lg-9 mb-5"  >  <!-- title -->
+    <h1 class="row col-lg-9 mb-1">
+        {{category}}
+    </h1>
+</div> <!-- title -->
+
+<div class="row" > <!-- popular foods list -->
+    {% for product in products %}  <!--popular_food_list -->
+    <div class="card mx-auto mb-3 p-2 ml-1" id="{{product.id}}" style="width: 18rem;">
+        
+        {% if product.photo %}
+            <img class="card-img-top m-1" src="{{product.photo.url}}" alt="Card image cap">
+        {% endif %}
+
+        <div class="card-body">
+            <p>{{product.food.name}}</p>
+            <p class="card-text"><b>{{product.price}}</b></p>
+        </div>
+
+        <div class="card-footer p-0 no-gutters">
+        </div>
+
+    </div>
+    {% endfor %}  
+</div> 
+{% endif %} {% endcomment %}
+
+ 
