--- a/src/templates/adminpanel/admin.html
+++ b/src/templates/adminpanel/admin.html
@@ -2,22 +2,46 @@
 {% block content %}
 <div style="padding:80px">
     {% if user.is_authenticated and user.is_superuser%}
-    <a href="{% url 'addfood' %}" class="d-flex btn btn-dark flex-row-reverse"style='width: 100px; '>Addfood</a>
-    {%endif%}
+    <a href="{% url 'addfood' %}" class="d-flex btn btn-dark flex-row-reverse"style='width: 100px; margin-bottom:20px; '>Addfood</a>
+    
 
+
+
+
+    {% comment %} <div class='d-flex flex-row bd-highlight mb-3 row row-cols-2 row-cols-lg-3'>
     {% for f in food %}
-    <section class="col-1-3"><div class="wrap-col">
-    <div class="box">
-    <div id="my-foods">
-    <h2 class="letter_spacing">{{f.name}}</h2>
-    <figure><img src="{{f.photo.url}}" style="height: 300px; width: 400px; padding-left:30px" alt="" ></figure>
+    <div>
+    <h2 >{{f.name}}</h2>
+    <img class="thumbnail" src="{{f.photo.url}}" style="height: 300px; width: 400px; padding-left:30px margin-left:20px;" alt="" >
     <p class="pad_bot1">{{f.description}}</p>
-    {% if user.is_authenticated and user.is_superuser%}
+    
     <a href="{% url 'deletefood' f.id %}" style=' width: 100px; padding-left:20px;'class="btn btn-dark">Delete</a>
     <a href="{% url 'updatefood' f.id %}" class="btn btn-dark" style='padding-left:20px; width: 100px;'>update</a>
-    {%endif%}
-    {%endfor%}
 
+    
+    </div>
+    {%endfor%} {% endcomment %}
+
+
+
+
+
+<div class='d-flex flex-row bd-highlight mb-3 row row-cols-2 row-cols-lg-3'>
+    {% for foods in food  %}
+    <div style="margin-bottom:20px;">
+    <img class="thumbnail" style="height: 250px; width: 300px;" src="{{ foods.photo.url }}">
+    <section class="box-element product" >
+        <h4 >{{foods.name}}</h4>
+    </section>
+    <section class="box-element product">
+    <a href="{% url 'deletefood' foods.id %}" style=' width: 100px; padding-left:20px;'class="btn btn-dark">Delete</a>
+    <a href="{% url 'updatefood' foods.id %}" class="btn btn-dark" style='padding-left:20px; width: 100px;'>update</a>
+    </section>
+  </div>
+  
+    {% endfor %}
+  </div>
+  {%endif%}
 </div>   
 
 {% endblock content %}
