--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
     {% block title %}{% endblock title %}
     <title>restaurant</title>
     {% block meta %}{% endblock meta %}
@@ -14,49 +19,116 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top "  >
-        <a class="navbar-brand text-warning" href="{%url 'restaurant:home' %}" >Home</a>
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-flex flex-row-reverse " id="navbarNav">
           <ul class="navbar-nav">
+            
+           
+               
             {% if user.is_authenticated %}
             <li class="nav-item">
             <a class ='nav-link text-warning'>wellcome {{user.username}}!</a>
             </li>
-            <li class="nav-item">
-                <p><a class ='nav-link text-warning' href="{% url 'logout' %}">Log Out</a></p>
-              </li>
+
+      
+
+
+
             {% else %}
+
+            <div  >
+            
             <li class="nav-item">
+              <div class="dropdown" >
+                <button  class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  login/signup
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                  <li><a class="dropdown-item" href="{% url 'signup2' %}">SignUp</a></li>
+                 
+                </ul>
+              </div>
+            </li>
+         
+          </div>
+          <li class="nav-item">
+            {% if not request.user.is_staff %}
+                    <div class="w-10 text-center">
+                      <form id="search-form"  autocomplete='off' style="margin-right:600px;">
+                        {% csrf_token %}
+                        <input type="text" id='search-input' class='p-1 w-20 search' placeholder="search" style="margin-left:50px;">
+                      </form>	
+                      <div id="result-box" class="result-card not-visible" style="width: 100px;max-height:none;"></div>
+                    </div> 
+            {% endif %}
+          </li>
+
+
+
+
+
+
+
+
+
+
+
+            {% comment %} <li class="nav-item">
                 <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'login' %}">Log In</a>
               </li>
               <li class="nav-item">
                 <a class ='nav-link text-warning'style="padding-right:20px; text-decoration:none;"href="{% url 'signup2' %}">Customer SignUp</a> 
-              </li>
-              <li class="nav-item">
+              </li> {% endcomment %}
+              {% comment %} <li class="nav-item">
                 <a class ='nav-link text-warning'style="padding-right:20px;text-decoration:none;"href="{% url 'signup' %}">Manager SignUp </a> 
-              </li>
+              </li> {% endcomment %}
             {% endif %}
+            {% if  not request.user.is_staff  %}
             <li class="nav-item">
               <a class="nav-link text-warning" href="{% url 'cart:carts_detail'%}">cart</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-warning" href="#">menu</a>
+              <a class="nav-link text-warning" href="{%url 'restaurant:branch_menu'%}">menu</a>
             </li>
+            {% endif %}
+            <li class="nav-item">
+            <a class="nav-link text-warning" href="{%url 'restaurant:home' %}" >Home</a>
+            </li>
+            {% comment %} <li class="nav-item">
+              <a class="nav-link text-warning" href="{% url 'restaurant:search'%}">search</a>
+            </li> {% endcomment %}
+            
                     <li class="nav-item">
+                      {% if user.is_authenticated %}
                       <div class="dropdown" style="margin-right:20px;">
                         <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                           User profiles
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                          <li><a class="dropdown-item" href="{%url 'admin'%}">Admin-Panel</a></li>
-                          <li><a class="dropdown-item" href="{%url 'profile'%}">customer-panel</a></li>
-                          <li><a class="dropdown-item" href="{%url 'mangerprofile'%}">restaurant-panel</a></li>
+                          
+                              {% if request.user.manager %}
+                              <li><a class="dropdown-item" href="{%url 'mangerprofile'%}">restaurant-panel</a></li>
+                              <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+                                
+                              </ul>
+                              {% elif request.user.is_superuser %}
+                              <li><a class="dropdown-item" href="{%url 'admin'%}">Admin-Panel</a></li>
+                              <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+                              {% else %}
+                              <li><a class="dropdown-item" href="{%url 'profile'%}">customer-panel</a></li>
+                              <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+                              {% endif %}
+                          
+                         
+                         
                         </ul>
                       </div>
                     </li>
-                    
+                    {% endif %}
             </div>
           </ul>
         </div>
@@ -77,7 +149,7 @@
       color: white;
       font-size: 25px;
       background-color: rgb(34, 34, 34);' >
-        <div class=" ">
+        <div>
             <i class="fa fa-instagram " aria-hidden="true"></i>
             <i class="fa fa-twitter " aria-hidden="true"></i>
             <i class="fa fa-telegram " aria-hidden="true"></i>
@@ -86,7 +158,83 @@
         <div>copyright &copy; 2022</div>
       </footer>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      
     {% block script %}{% endblock script %}
+
+
+
+
+    <script > 
+      var CSRF_TOKEN = "{{ csrf_token }}";
+      var URL ="{% url 'restaurant:search2' %}";
+    </script>
+    <script>
+      window.onload = function (){
+          
+          const url=  window.location.href
+          const searchForm = document.getElementById("search-form")
+          const searchInput = document.getElementById("search-input")
+          const resultBox = document.getElementById('result-box')
+          
+          const csrf = document.getElementsByName('csrfmiddlewaretoken')[0].value
+          
+          const sendSearchData = (data)=>{
+              $.ajax({
+                  type:'POST',
+                  url: URL,
+                  data :{
+                      'csrfmiddlewaretoken':csrf,
+                      'data': data,
+                  },
+                  success: function(res){
+                      console.log(res.dataview)
+                      const data = res.dataview
+                      if (Array.isArray(data)){
+                          resultBox.innerHTML = ""
+                          data.forEach(food=>{
+                              resultBox.innerHTML += `
+                              
+                              <a href="/detail/${food.pk}" class='item' >
+                                  <div class ="row" style="margin-left:300px; margin-top:20px;">
+                                      <div class ="col-2>
+                                          <p class="text-muted" ><img style="height: 50px; width: 100px; padding-left:30px" src="${food.food.photo}" class="food-img"> <b style="color:white">${food.food.name}</b>  <b style="color:#6610f2">${food.branch.department}</b></p>
+                                          <hr>
+                                    
+                                          
+                                      </div>
+                                  </div>
+                              </a>
+                              `
+                          })
+          
+          
+                      }else{
+                          if (searchInput.value.length > 0){
+                              resultBox.innerHTML=`<b>${data}</b>`
+                          }else{
+                              resultBox.classList.add('not-visible')
+                          }
+                      }
+                 
+                  },
+                  error: function(error){
+                      console.log(error)
+                  }
+              })
+          }
+          
+          
+          // load whatever is added in search input as value (letter by letter)
+          searchInput.addEventListener("keyup", e=>{
+              console.log(e.target.value)
+              if (resultBox.classList.contains('not-visible')){
+                  resultBox.classList.remove('not-visible')
+              }
+              sendSearchData(e.target.value)
+          })
+            
+          }
+    
+    </script> 
 </body>
 </html>
