--- a/src/templates/cart/food/messages.html
+++ b/src/templates/cart/food/messages.html
@@ -10,5 +10,23 @@
    
 {% endif %}
 
+{% block script %}
+
+<script>
+
+    var closebtns = document.getElementsByClassName("close");
+var i;
+
+/* Loop through the elements, and hide the parent, when clicked on */
+for (i = 0; i < closebtns.length; i++) {
+  closebtns[i].addEventListener("click", function() {
+    this.parentElement.style.display = 'none';
+  });
+}
+</script>
+
+
+{% endblock script %}
+
 
 
