--- a/src/templates/registrations/customer_signup.html
+++ b/src/templates/registrations/customer_signup.html
@@ -2,14 +2,18 @@
 {% load crispy_forms_tags %} 
 
 {% block content %}
+<center>
+<div style='padding:30px; margin-top:50px;'>
+<h2>customer Sign Up</h2>
 
-<div style='padding:200px;'>
-<h2>Sign Up</h2>
-    <form method="POST">
+
+    <form method="POST" style='margin-top:20px;' >
         {% csrf_token %}
         {{ register_form|crispy }}  
         {{ form.as_p }}
-        <button type="submit">Sign Up</button>
+       <section> <button type="submit">Sign Up </button>&nbsp; <a href="{% url 'signup' %}">Are you a manager?click here</a> </section>
     </form>
+    
 </div>
+</center>
 {% endblock content %}
