--- a/src/templates/restaurantpanel/branch.html
+++ b/src/templates/restaurantpanel/branch.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
+<div>
 <br> 
 {% for department in object_list %} 
 <div class="card text-center"> 
